# NarcoticSense-AI

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  START_HERE.command  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.command
app/: streamlit_app.py
configs/: default.yaml
docker/: Dockerfile.api
docs/: architecture.md  chemist_quickstart.md  responsible_use.md
examples/: example_spectrum.csv
narcoticsense-ai 4/: LICENSE  README.md  README_FIRST_MAC.txt  check_install.py  pyproject.toml
narcoticsense-ai 4/docker/: Dockerfile.streamlit  docker-compose.yml
narcoticsense-ai 4/docs/: api_design.md  implementation_roadmap.md  index.md  scientific_workflow.md
narcoticsense-ai 4/src/narcoticsense/: chemometrics.py  reports.py
narcoticsense-ai 4/tests/: test_features.py  test_importer.py  test_preprocessing.py  test_spectrum.py
scripts/: run_app.sh  test_all.sh
src/narcoticsense/: chemometrics.py
src/narcoticsense/active_learning/: query.py
src/narcoticsense/api/: main.py
src/narcoticsense/classical_ml/: __init__.py  classifier.py  supervised.py
src/narcoticsense/database/: __init__.py  models.py  session.py
src/narcoticsense/explainability/: __init__.py  attribution.py  (+1 more)
tests/: test_chemometrics_v04.py  test_dataset_chemometrics.py  test_models_engine.py  test_quality_library_ml.py  test_spectroscopy_engine_v03.py  test_v060_trust.py  test_v070_molecular_fusion.py  test_v080_real_ai_workflow.py
(+47 files in other folders)
