[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narcoticsense-ai"
version = "0.7.0"
description = "Open AI platform for spectroscopy-driven narcotic sensing research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "NarcoticSense AI Contributors"}]
keywords = ["spectroscopy", "chemometrics", "machine-learning", "forensics", "uncertainty"]
dependencies = [
  "numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "scikit-learn>=1.3",
  "matplotlib>=3.7", "plotly>=5.18", "pydantic>=2.5", "fastapi>=0.110",
  "uvicorn>=0.27", "streamlit>=1.32", "sqlalchemy>=2.0", "pyyaml>=6.0",
  "joblib>=1.3"
]

[project.optional-dependencies]
ml = ["xgboost", "lightgbm", "catboost", "shap", "mlflow", "rdkit"]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy", "pre-commit"]
deep = ["torch", "transformers"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101", "E501", "E402"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
